# magnum-moonlander

./: CMakeLists.txt  README.md  version_config.h.in
modules/: FindBox2D.cmake
res/: Capsule.xcf  CapsuleEffect.xcf  Lander.xcf  LanderEngineEffect.xcf  ShipEngine.xcf  ShipHull.xcf  resources.conf
src/: game.cpp
src/MoonLander/: AssetManager.h  Box.h  CameraControl.h  DrawableMesh.h  Game.h  Lander.h  Level.h  Sprite.h  SpriteAnimation.h
src/MoonLander/Entity/: Box.h  Lander.h
